Change logo image format from PNG to JPEG

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="theme-color" content="#E50914" />
   <meta property="og:title" content="WHISTLE — Expose Fraud. Anonymously. Verified.">
   <meta property="og:description" content="Anonymous submissions • AI analysis • Journalist verification • Public transparency.">
-  <meta property="og:image" content="logo.png">
+  <meta property="og:image" content="logo.jpeg">
   <meta name="twitter:card" content="summary_large_image">
 
   <!-- ===== FONT ===== -->
@@ -164,7 +164,7 @@
   <nav role="navigation" aria-label="Primary">
     <div class="container">
       <a class="brand" href="#" aria-label="Whistle home">
-        <img src="logo.png" alt="Whistle logo" />
+        <img src="logo.jpeg" alt="Whistle logo" />
         WHISTLE
       </a>
       <div class="nav-links" role="menubar">
@@ -422,7 +422,7 @@
   <footer role="contentinfo">
     <div class="container footer-wrap">
       <div class="brand" style="letter-spacing:2px">
-        <img src="logo.png" alt="Whistle logo small" /> WHISTLE
+        <img src="logo.jpeg" alt="Whistle logo small" /> WHISTLE
       </div>
       <div class="f-links">
         <a href="#protocol">Protocol</a>
